# hw_m6

./: create_db.sql  create_table.py  db_connection.py  hw.db  insrt_to_table.py  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  seeds.py
